# Test_Api

./: README.md
test_api/: .env  docker-compose.yml  pyproject.toml
test_api/.pytest_cache/v/cache/: lastfailed  nodeids
test_api/store/: main.py  routers.py
test_api/store/controllers/: product.py
test_api/store/core/: config.py  exceptions.py
test_api/store/db/: mongo.py
test_api/store/models/: base.py  product.py
test_api/store/schemas/: base.py  product.py
test_api/store/usecases/: product.py
test_api/tests/: conftest.py  factories.py
test_api/tests/controllers/: test_product.py
test_api/tests/schemas/: test_product.py
test_api/tests/usecases/: test_product.py
